--- a/src/Makefile
+++ b/src/Makefile
@@ -1,10 +1,18 @@
-all: main
+PROGRAM = simulazione
+OBJECTS = simulation.o alice.o bob.o reconciliation.o channel.o paramEstimation.o decoder.o main.o
 
-main:
-	touch coherent_states.csv
-	g++  *.cpp -Wall -O3 -o simulazione
+CC = g++
+CFLAGS = -O3 -Wall 
+
+.SUFFIXES: .o .C
+
+all: ${OBJECTS}
+	${CC} -o ${PROGRAM} ${OBJECTS}
+
+.C.o: $<
+	$(CC) ${CFLAGS} -c $< -o $@
 
 .PHONY: clean
 
 clean: 
-	rm -f simulazione *.csv
+	rm -f simulazione *.csv *.o
